maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:1: error: ';' expected but 'def' found.
ooverride def run() {
          ^